samples/_failures_safe/1760885718_ed4bc5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7116b571.c: In function ‘main’:
./samples/SAFE/__tmp_7116b571.c:119:9: error: expected declaration or statement at end of input
  119 |         else if (strcmp(entries[i].level, "ERROR") == 0) error_count++;
      |         ^~~~
./samples/SAFE/__tmp_7116b571.c:119:9: error: expected declaration or statement at end of input
